# linear-walkthrough

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  renderer.py  server.py  template.py  test_walkthrough.md
docs/plans/: 2026-03-05-interactive-server-mode-design.md  2026-03-05-markdown-html-renderer-design.md
linear_walkthrough/: renderer.py  server.py
linear_walkthrough/templates/: page.html  page_interactive.html
